# so

./: CMakeLists.txt  LICENSE  README.md
Aula1 - Introdução/: Catolica_SO_Aula_01_(2026).pptx
Aula2 - Sistemas Operacionais - História, Conceitos e Estruturas de Sistemas Operacionais/: commands_linux.md
Aula3 - Sistemas Operacionais - Sistema Operacional como Máquina Estendida e Gerenciador de Recursos/Códigos no C/src/: leitor_de_arquivo.c  leitor_de_arquivo.ilk  texto.txt
Aula4 - Sistemas Operacionais - Interacao com o Sistema Operacional/: ENUNCIADO.md  relatorio_so.txt  teste_kernel  teste_kernel.c
Aula5 - Introducao a processo e compreensao PCB/: efeito_zumbi.c
Aula5 - Threads e escalonamento/: race_condition  race_condition.c
Aula6 - Algoritmos de escalonamento ll - Sincronização de processos e deadlocks/: jantar_filosofos.c  semaforo_bin.c  semaforo_bin_with_count.c
Aula7 - Atividade Pratica - Protecao e Seguranca/: doc.md  vulnerable_server.py
Aula7 - Atividade Pratica - Protecao e Seguranca/create_folder_http/: tests.txt
