cmake_minimum_required(VERSION 4.1)
project(so C)

set(CMAKE_C_STANDARD 11)

add_executable(so
        "Aula3 - Sistemas Operacionais - Sistema Operacional como Máquina Estendida e Gerenciador de Recursos/Códigos no C/src/leitor_de_arquivo.c"
        "Aula4 - Sistemas Operacionais - Interacao com o Sistema Operacional/teste_kernel.c")
